# launcher

./: .gitignore  .prettierrc  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1725982331417-3bc8e49d277bf.mjs
.github/workflows/: main.yml  willcompile.yml
EpicMickeyLauncher/: index.html  package-lock.json  package.json
EpicMickeyLauncher/src/: App.svelte  style.css  vite-env.d.ts
EpicMickeyLauncher/src-tauri/: Cargo.toml  tauri.conf.json  wit.exe.stackdump
EpicMickeyLauncher/src-tauri/src/: main.rs
EpicMickeyLauncher/src/routes/: Games.svelte  LevelLoader.svelte  accountsettings.svelte  addgame.svelte  modmarket.svelte  modpage.svelte  profilepage.svelte  quickstart.svelte  register.svelte  settings.svelte  uploadmod.svelte
EpicMickeyLauncher/src/routes/components/: CommentNode.svelte  GameNode.svelte  ModInstall.svelte  ModNode.svelte  SettingsModNode.svelte  header.svelte  loading.svelte  userprofilemodnode.svelte
EpicMickeyLauncher/src/routes/data/: levels.json  levels_em2.json  mods.json  modsem2.json
src/: App.svelte  index.html  main.js  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: default.toml
src-tauri/src/: archive.rs  debug.rs  dolphin.rs  download.rs  emr.rs  git.rs  helper.rs  iso_extract.rs  main.rs  mod_info.rs  mod_management.rs  play.rs  upload.rs
src/routes/: Games.svelte  LevelLoader.svelte  accountsettings.svelte  addgame.svelte  games.svelte  levelloader.svelte  modmarket.svelte  modpage.svelte  modpublisher.svelte  profilepage.svelte  quickstart.svelte  register.svelte  settings.svelte  uploadmod.svelte
src/routes/components/: CommentNode.svelte  Commit.svelte  GameNode.svelte  ModInstall.svelte  ModNode.svelte  OneTimeNotice.svelte  PublisherModNode.svelte  Question.svelte  SelectGameForMod.svelte  SettingsModNode.svelte  User.svelte  addgame.svelte  captcha.svelte  dialog.svelte  downloadMod.svelte  header.svelte  loading.svelte  userprofilemodnode.svelte
src/routes/data/: filealias.json  game.json  levels.json  levels_em2 copy.json  levels_em2.json
