[package]
name = "epic-mickey-launcher"
version = "0.5.3"
description = "launcher"
authors = ["Jonas Kalsvik"]
license = "MIT"
repository = "Epic-Mickey-Launcher"
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2.0.0-rc.9", features = [] }
[dependencies]
tauri-plugin-process = "2.0.0-rc.1"
tauri-plugin-dialog = "2.0.0-rc.5"
tauri-plugin-fs = "2.0.0-rc.3"
dirs-next = "2.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["stream", "json", "multipart"] }
walkdir = "2.3.2"
bytes = "1.10.1"
futures-util = "0.3.31"
open = "5.1.2"
chrono = "0.4.31"
eml-validate = "0.1.9"
dataurl = "0.1.2"
tauri = { version = "2.0.0-rc.10", features = ["devtools"] }
tauri-plugin-log = "2.0.0-rc"
[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", features = ["deep-link"], branch = "v2" }
tauri-plugin-deep-link = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
compress-tools = "0.15.1"
tauri-plugin-os = "2.0.0-rc"
anyhow = "1.0.97"
tar = "0.4.44"
flate2 = "1.1.0"
[features]
default = ["custom-protocol"]
custom-protocol = []


