[package]
name = "EpicMickeyLauncher"
version = "0.3.2"
description = "launcher"
authors = ["Memer"]
license = "MIT"
repository = "Epic-Mickey-Launcher"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tokio-stream = "0.1.14"
sevenz-rust = "0.2.11"
dirs-next = "2.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog-all", "fs-all", "path-all", "shell-open"] }
zip-extract = "0.1.2"
reqwest = {version = "0.11.13", features = ["stream"] }
copy_dir = "0.1.2"
fs_extra = "1.2.0"
scan_dir = "0.3.3"
walkdir = "2.3.2"
bytes = "1.4.0"
json = "0.12.4"
futures-util = "0.3.14"
open = "4.1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
